--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-native-svg-uri": "^1.2.3",
     "@types/react-native-vector-icons": "^6.4.5",
+    "axios": "^0.19.2",
+    "nodejs-mobile-react-native": "^0.6.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dotenv": "^0.2.0",
+    "react-native-expo-viewport-units": "^0.0.8",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.9.0",
