--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@types/date-fns": "^2.6.0",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-native-svg-uri": "^1.2.3",
     "@types/react-native-vector-icons": "^6.4.5",
     "axios": "^0.19.2",
+    "date-fns": "^2.14.0",
     "nodejs-mobile-react-native": "^0.6.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
