--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-linear-gradient": "^2.4.0",
+    "@types/react-native-modal": "^4.1.1",
     "@types/react-native-svg-uri": "^1.2.3",
     "@types/react-native-vector-icons": "^6.4.5",
     "axios": "^0.19.2",
@@ -26,8 +27,10 @@
     "react-native": "0.62.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-expo-viewport-units": "^0.0.8",
+    "react-native-extra-dimensions-android": "^1.2.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.9.0",
