--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodejs-mobile-react-native": "^0.6.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-bootsplash": "^2.2.5",
     "react-native-dotenv": "^0.2.0",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-extra-dimensions-android": "^1.2.5",
