--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-bootsplash": "^2.2.5",
+    "react-native-camera": "^3.31.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-expo-viewport-units": "^0.0.8",
     "react-native-extra-dimensions-android": "^1.2.5",
