--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -229,6 +229,6 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf', "Foundation.ttf", "MaterialCommunityIcons.ttf", "AntDesign.ttf", "MaterialIcons", "Octicons.ttf", "SimpleLineIcons.ttf", "Feather.ttf", "Fontisto.ttf" ] // Name of the font files you want to copy
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf', "Foundation.ttf", "MaterialCommunityIcons.ttf", "AntDesign.ttf", "MaterialIcons.ttf", "Octicons.ttf", "SimpleLineIcons.ttf", "Feather.ttf", "Fontisto.ttf", "FontAwesome.ttf" ] // Name of the font files you want to copy
 ]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
