--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/date-fns": "^2.6.0",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-linear-gradient": "^2.4.0",
@@ -21,6 +22,7 @@
     "@types/react-native-svg-uri": "^1.2.3",
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-native-video": "^5.0.1",
+    "@types/react-redux": "^7.1.9",
     "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "nodejs-mobile-react-native": "^0.6.1",
@@ -41,7 +43,8 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-video": "^4.4.5"
+    "react-native-video": "^4.4.5",
+    "react-redux": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
