--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-svg-uri": "^1.2.3",
+    "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.5",
     "react-redux": "^7.2.0"
